# cold-bears-identity-program

cold-bears-identity-program-main/cold-bears-identity-program-main/identity-program/: Anchor.toml
cold-bears-identity-program-main/cold-bears-identity-program-main/identity-program/programs/identity-program/src/account_states/: identity.rs  mod.rs
cold-bears-identity-program-main/cold-bears-identity-program-main/identity-program/programs/identity-program/src/instructions/: init_identity_manager.rs  mod.rs  set_identity_owner_transferable.rs
cold-bears-identity-program-main/cold-bears-identity-program-main/identity-program/programs/reward-proof-of-online/: Cargo.toml
cold-bears-identity-program-main/cold-bears-identity-program-main/identity-program/programs/reward-proof-of-online/src/: lib.rs
cold-bears-identity-program-main/cold-bears-identity-program-main/identity-program/tests/identity-program/: init.ts
identity-program/programs/identity-program/: Cargo.toml
identity-program/programs/identity-program/src/: constants.rs  errors.rs  lib.rs
identity-program/programs/identity-program/src/account_states/: identity_manager.rs  proof_of_online.rs
identity-program/programs/identity-program/src/instructions/: init_identity.rs  init_proof_of_online.rs  set_allow_init_identity.rs  set_identity_price.rs  set_vouch_reward.rs  sign_proof_of_online.rs  update_identity_owner.rs  vouch.rs
identity-program/tests/identity-program/: identity_manager.ts  init_identity.ts  set_price.ts  set_vouch_reward.ts  vouch.ts
